--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "apollo-server": "^2.18.2",
     "graphql": "^15.3.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.6.0"
   }
 }
